[package]
name = "chain-storage-btree"
version = "0.1.0"
authors = ["dev@iohk.io"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
chain-core = { path = "../chain-core" }
chain-storage = { path = "../chain-storage" }
chain-ser = { path = "../chain-ser" }
btree = { path = "../btree" }
thiserror = "1.0"

[dev-dependencies]
chain-storage = { path = "../chain-storage", features=["test-api"] }
rand_core = "0.5"
